# sycl_example

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/bezier_curve/: CMakeLists.txt
src/bezier_curve/src/: main.cpp
src/eigenvector/: CMakeLists.txt
src/eigenvector/src/: main.cpp
src/inverse_matrix/: CMakeLists.txt
src/inverse_matrix/src/: main.cpp
src/matrix_inversion/: CMakeLists.txt
src/sorting_net/: CMakeLists.txt
src/sorting_net/src/: main.cpp
src/util/: CMakeLists.txt
src/util/inc/util/: benchmark.hpp  parallel_for.hpp  sycl_devices.hpp
src/util/src/: benchmark.cpp
